--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "tailwindcss": "^4.0.6",
     "ulid": "^3.0.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
