--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "tailwindcss": "^4.0.6",
     "ulid": "^3.0.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
@@ -64,6 +65,7 @@
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.7.2",
     "vite": "^7.1.7",
+    "vite-plugin-pwa": "^1.0.3",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
   }
