--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "hook:commitLint": "commitlint --edit"
   },
   "dependencies": {
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
